whitening function now receives bytes not swapped

--- a/GNU_Radio_Companion/10_FSK_hardware/whitening.ipynb
+++ b/GNU_Radio_Companion/10_FSK_hardware/whitening.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -10,251 +10,253 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "##### INDEX: 0, BYTE: 00000010 #####\n",
+      "##### INDEX: 0, BYTE: 01000000 #####\n",
       "\n",
       "\n",
-      "bit_pos: 7\n",
+      "bit_pos: 0\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
       "whitened_byte: 00000000\n",
       "lfsr: 0000010\n",
       "\n",
-      "bit_pos: 6\n",
+      "bit_pos: 1\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
       "whitened_byte: 00000000\n",
       "lfsr: 0000100\n",
       "\n",
-      "bit_pos: 5\n",
+      "bit_pos: 2\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
       "whitened_byte: 00000000\n",
       "lfsr: 0001000\n",
       "\n",
-      "bit_pos: 4\n",
+      "bit_pos: 3\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
       "whitened_byte: 00000000\n",
       "lfsr: 0010000\n",
       "\n",
-      "bit_pos: 3\n",
+      "bit_pos: 4\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
       "whitened_byte: 00000000\n",
       "lfsr: 0100000\n",
       "\n",
-      "bit_pos: 2\n",
+      "bit_pos: 5\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
       "whitened_byte: 00000000\n",
       "lfsr: 1000000\n",
       "\n",
-      "bit_pos: 1\n",
+      "bit_pos: 6\n",
       "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
       "whitened_byte: 00000000\n",
       "lfsr: 0010001\n",
       "\n",
-      "bit_pos: 0\n",
+      "bit_pos: 7\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
       "whitened_byte: 00000000\n",
       "lfsr: 0100010\n",
       "\n",
-      "##### INDEX: 1, BYTE: 01010011 #####\n",
+      "##### INDEX: 1, BYTE: 11001010 #####\n",
       "\n",
       "\n",
-      "bit_pos: 7\n",
+      "bit_pos: 0\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
       "whitened_byte: 00000000\n",
       "lfsr: 1000100\n",
       "\n",
-      "bit_pos: 6\n",
+      "bit_pos: 1\n",
       "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
       "whitened_byte: 00000000\n",
       "lfsr: 0011001\n",
       "\n",
-      "bit_pos: 5\n",
+      "bit_pos: 2\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
       "whitened_byte: 00000000\n",
       "lfsr: 0110010\n",
       "\n",
-      "bit_pos: 4\n",
+      "bit_pos: 3\n",
       "data_bit: 1, lfsr_msb: 0, whitened_bit: 1\n",
-      "whitened_byte: 00010000\n",
+      "whitened_byte: 00001000\n",
       "lfsr: 1100100\n",
       "\n",
-      "bit_pos: 3\n",
+      "bit_pos: 4\n",
       "data_bit: 0, lfsr_msb: 1, whitened_bit: 1\n",
       "whitened_byte: 00011000\n",
       "lfsr: 1011001\n",
       "\n",
-      "bit_pos: 2\n",
+      "bit_pos: 5\n",
       "data_bit: 0, lfsr_msb: 1, whitened_bit: 1\n",
-      "whitened_byte: 00011100\n",
+      "whitened_byte: 00111000\n",
       "lfsr: 0100011\n",
       "\n",
-      "bit_pos: 1\n",
+      "bit_pos: 6\n",
       "data_bit: 1, lfsr_msb: 0, whitened_bit: 1\n",
-      "whitened_byte: 00011110\n",
+      "whitened_byte: 01111000\n",
       "lfsr: 1000110\n",
       "\n",
-      "bit_pos: 0\n",
+      "bit_pos: 7\n",
       "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
-      "whitened_byte: 00011110\n",
+      "whitened_byte: 01111000\n",
       "lfsr: 0011101\n",
       "\n",
-      "##### INDEX: 2, BYTE: 01111101 #####\n",
+      "##### INDEX: 2, BYTE: 10111110 #####\n",
       "\n",
       "\n",
-      "bit_pos: 7\n",
+      "bit_pos: 0\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
       "whitened_byte: 00000000\n",
       "lfsr: 0111010\n",
       "\n",
-      "bit_pos: 6\n",
+      "bit_pos: 1\n",
       "data_bit: 1, lfsr_msb: 0, whitened_bit: 1\n",
-      "whitened_byte: 01000000\n",
+      "whitened_byte: 00000010\n",
       "lfsr: 1110100\n",
-      "\n",
-      "bit_pos: 5\n",
-      "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
-      "whitened_byte: 01000000\n",
-      "lfsr: 1111001\n",
-      "\n",
-      "bit_pos: 4\n",
-      "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
-      "whitened_byte: 01000000\n",
-      "lfsr: 1100011\n",
-      "\n",
-      "bit_pos: 3\n",
-      "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
-      "whitened_byte: 01000000\n",
-      "lfsr: 1010111\n",
       "\n",
       "bit_pos: 2\n",
       "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
-      "whitened_byte: 01000000\n",
+      "whitened_byte: 00000010\n",
+      "lfsr: 1111001\n",
+      "\n",
+      "bit_pos: 3\n",
+      "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
+      "whitened_byte: 00000010\n",
+      "lfsr: 1100011\n",
+      "\n",
+      "bit_pos: 4\n",
+      "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
+      "whitened_byte: 00000010\n",
+      "lfsr: 1010111\n",
+      "\n",
+      "bit_pos: 5\n",
+      "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
+      "whitened_byte: 00000010\n",
       "lfsr: 0111111\n",
       "\n",
-      "bit_pos: 1\n",
+      "bit_pos: 6\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
-      "whitened_byte: 01000000\n",
+      "whitened_byte: 00000010\n",
       "lfsr: 1111110\n",
       "\n",
-      "bit_pos: 0\n",
+      "bit_pos: 7\n",
       "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
-      "whitened_byte: 01000000\n",
+      "whitened_byte: 00000010\n",
       "lfsr: 1101101\n",
       "\n",
-      "##### INDEX: 3, BYTE: 11100011 #####\n",
+      "##### INDEX: 3, BYTE: 11000111 #####\n",
       "\n",
       "\n",
-      "bit_pos: 7\n",
+      "bit_pos: 0\n",
       "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
       "whitened_byte: 00000000\n",
       "lfsr: 1001011\n",
       "\n",
-      "bit_pos: 6\n",
+      "bit_pos: 1\n",
       "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
       "whitened_byte: 00000000\n",
       "lfsr: 0000111\n",
       "\n",
-      "bit_pos: 5\n",
+      "bit_pos: 2\n",
       "data_bit: 1, lfsr_msb: 0, whitened_bit: 1\n",
-      "whitened_byte: 00100000\n",
+      "whitened_byte: 00000100\n",
       "lfsr: 0001110\n",
-      "\n",
-      "bit_pos: 4\n",
-      "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
-      "whitened_byte: 00100000\n",
-      "lfsr: 0011100\n",
       "\n",
       "bit_pos: 3\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
-      "whitened_byte: 00100000\n",
+      "whitened_byte: 00000100\n",
+      "lfsr: 0011100\n",
+      "\n",
+      "bit_pos: 4\n",
+      "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
+      "whitened_byte: 00000100\n",
       "lfsr: 0111000\n",
       "\n",
-      "bit_pos: 2\n",
+      "bit_pos: 5\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
-      "whitened_byte: 00100000\n",
+      "whitened_byte: 00000100\n",
       "lfsr: 1110000\n",
       "\n",
-      "bit_pos: 1\n",
+      "bit_pos: 6\n",
       "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
-      "whitened_byte: 00100000\n",
+      "whitened_byte: 00000100\n",
       "lfsr: 1110001\n",
       "\n",
-      "bit_pos: 0\n",
+      "bit_pos: 7\n",
       "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
-      "whitened_byte: 00100000\n",
+      "whitened_byte: 00000100\n",
       "lfsr: 1110011\n",
       "\n",
-      "##### INDEX: 4, BYTE: 10011000 #####\n",
+      "##### INDEX: 4, BYTE: 00011001 #####\n",
       "\n",
       "\n",
-      "bit_pos: 7\n",
+      "bit_pos: 0\n",
       "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
       "whitened_byte: 00000000\n",
       "lfsr: 1110111\n",
       "\n",
-      "bit_pos: 6\n",
+      "bit_pos: 1\n",
       "data_bit: 0, lfsr_msb: 1, whitened_bit: 1\n",
-      "whitened_byte: 01000000\n",
+      "whitened_byte: 00000010\n",
       "lfsr: 1111111\n",
       "\n",
-      "bit_pos: 5\n",
+      "bit_pos: 2\n",
       "data_bit: 0, lfsr_msb: 1, whitened_bit: 1\n",
-      "whitened_byte: 01100000\n",
+      "whitened_byte: 00000110\n",
       "lfsr: 1101111\n",
-      "\n",
-      "bit_pos: 4\n",
-      "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
-      "whitened_byte: 01100000\n",
-      "lfsr: 1001111\n",
       "\n",
       "bit_pos: 3\n",
       "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
-      "whitened_byte: 01100000\n",
+      "whitened_byte: 00000110\n",
+      "lfsr: 1001111\n",
+      "\n",
+      "bit_pos: 4\n",
+      "data_bit: 1, lfsr_msb: 1, whitened_bit: 0\n",
+      "whitened_byte: 00000110\n",
       "lfsr: 0001111\n",
       "\n",
-      "bit_pos: 2\n",
+      "bit_pos: 5\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
-      "whitened_byte: 01100000\n",
+      "whitened_byte: 00000110\n",
       "lfsr: 0011110\n",
       "\n",
-      "bit_pos: 1\n",
+      "bit_pos: 6\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
-      "whitened_byte: 01100000\n",
+      "whitened_byte: 00000110\n",
       "lfsr: 0111100\n",
       "\n",
-      "bit_pos: 0\n",
+      "bit_pos: 7\n",
       "data_bit: 0, lfsr_msb: 0, whitened_bit: 0\n",
-      "whitened_byte: 01100000\n",
+      "whitened_byte: 00000110\n",
       "lfsr: 1111000\n",
-      "['0b00000000', '0b00011110', '0b01000000', '0b00100000', '0b01100000']\n",
+      "['0b00000000', '0b01111000', '0b00000010', '0b00000100', '0b00000110']\n",
       "['0', '120', '2', '4', '6']\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "# Flip bit order in a byte (LSB <-> MSB)\n",
     "def swap_bits(byte):\n",
     "    return int(f\"{byte:08b}\"[::-1], 2)\n",
     "\n",
     "# Whiten/dewhiten a list of bytes using a 7-bit LFSR.\n",
-    "def btle_whiten(data, lfsr=0x01, polynomial=0x11):\n",
+    "def BLE_whitening(data, lfsr=0x01, polynomial=0x11):\n",
     "    # Input data must be LSB first (0x7C = 124 must be formatted as 0011 1110)\n",
     "    # LFSR default value is 0x01 as it is the default value in the nRF DATAWHITEIV register\n",
     "    # The polynomial default value is 0x11 = 0b001_0001 -> x⁷ + x⁴ + 1 (x⁷ is omitted)\n",
-    "    output = [None] * len(data)  # Initialise output list\n",
+    "    output = np.empty_like(data)  # Initialise output array\n",
     "\n",
     "    for idx, byte, in enumerate(data):\n",
     "        whitened_byte = 0\n",
     "        print(f'\\n##### INDEX: {idx}, BYTE: {byte:08b} #####\\n')\n",
     "        for bit_pos in range(8):\n",
-    "            print(f'\\nbit_pos: {7 - bit_pos}')\n",
+    "            print(f'\\nbit_pos: {bit_pos}')\n",
     "\n",
     "            # XOR the current data bit with LFSR MSB\n",
     "            lfsr_msb = (lfsr & 0x40) >> 6  # LFSR is 7-bit, so MSB is at position 6\n",
-    "            data_bit = (byte >> (7 - bit_pos)) & 1  # Extract current bit\n",
+    "            data_bit = (byte >> bit_pos) & 1  # Extract current bit\n",
     "            whitened_bit = data_bit ^ lfsr_msb  # XOR\n",
     "            print(f'data_bit: {data_bit}, lfsr_msb: {lfsr_msb}, whitened_bit: {whitened_bit}')\n",
     "            \n",
     "            # Update the whitened byte\n",
-    "            whitened_byte |= (whitened_bit << (7 - bit_pos))\n",
+    "            whitened_byte |= (whitened_bit << (bit_pos))\n",
     "            print(f'whitened_byte: {whitened_byte:08b}')\n",
     "\n",
     "            # Update LFSR\n",
@@ -270,9 +272,10 @@
     "\n",
     "# Example usage:\n",
     "data = [0b00000010, 0b01010011, 0b01111101, 0b11100011, 0b10011000]  # Example received SDR data\n",
-    "whitened = btle_whiten(data)\n",
+    "data = [swap_bits(byte) for byte in data]\n",
+    "whitened = BLE_whitening(data)\n",
     "print([f\"0b{b:08b}\" for b in whitened])  # Output in binary\n",
-    "print([f\"{swap_bits(b)}\" for b in whitened])  # Output in decimal"
+    "print([f\"{b}\" for b in whitened])  # Output in decimal"
    ]
   }
  ],
