added whitened reading of length byte

--- a/GNU_Radio_Companion/10_FSK_hardware/whitening.ipynb
+++ b/GNU_Radio_Companion/10_FSK_hardware/whitening.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -276,6 +276,91 @@
     "whitened = BLE_whitening(data)\n",
     "print([f\"0b{b:08b}\" for b in whitened])  # Output in binary\n",
     "print([f\"{b}\" for b in whitened])  # Output in decimal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 64 202]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def binary_to_uint8_list(binary):\n",
+    "    # Ensure the binary array length is a multiple of 8\n",
+    "    if len(binary) % 8 != 0:\n",
+    "        raise ValueError(\"The binary list length must be a multiple of 8.\")\n",
+    "    \n",
+    "    # Convert binary to NumPy array\n",
+    "    binary_array = np.array(binary, dtype=np.uint8)\n",
+    "    uint8_list = np.packbits(binary_array)\n",
+    "\n",
+    "    # Swap bits in each byte (LSB first conversion)\n",
+    "    swapped_uint8_list = np.array([swap_bits(byte) for byte in uint8_list], dtype=np.uint8)\n",
+    "\n",
+    "    return swapped_uint8_list\n",
+    "\n",
+    "binary_data = np.array([0,0,0,0,0,0,1,0,  0,1,0,1,0,0,1,1], dtype=np.uint8)  # Two bytes: 0b00000010 and 0b01010011\n",
+    "uint8_result = binary_to_uint8_list(binary_data)\n",
+    "\n",
+    "print(uint8_result)  # Output: [  2  83]  (Decimal of 0b00000010 and 0b01010011)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0b00000000', '0b01111000', '0b00000010', '0b00000100', '0b00000110']\n",
+      "[np.int64(0), np.int64(120), np.int64(2), np.int64(4), np.int64(6)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def BLE_whitening(data, lfsr=0x01, polynomial=0x11):\n",
+    "        # Input data must be LSB first (0x7C = 124 must be formatted as 0011 1110)\n",
+    "        # LFSR default value is 0x01 as it is the default value in the nRF DATAWHITEIV register\n",
+    "        # The polynomial default value is 0x11 = 0b001_0001 -> x⁷ + x⁴ + 1 (x⁷ is omitted)\n",
+    "        output = np.empty_like(data)  # Initialise output array\n",
+    "\n",
+    "        for idx, byte, in enumerate(data):\n",
+    "            whitened_byte = 0\n",
+    "            for bit_pos in range(8):\n",
+    "                # XOR the current data bit with LFSR MSB\n",
+    "                lfsr_msb = (lfsr & 0x40) >> 6  # LFSR is 7-bit, so MSB is at position 6\n",
+    "                data_bit = (byte >> bit_pos) & 1  # Extract current bit\n",
+    "                whitened_bit = data_bit ^ lfsr_msb  # XOR\n",
+    "                \n",
+    "                # Update the whitened byte\n",
+    "                whitened_byte |= (whitened_bit << (bit_pos))\n",
+    "\n",
+    "                # Update LFSR\n",
+    "                lfsr = (lfsr << 1) & 0x7F  # 0x7F mask to keep ksfr within 7 bits\n",
+    "                if lfsr_msb:  # If MSB is 1 (before shifting), apply feedback\n",
+    "                    lfsr = lfsr ^ polynomial  # XOR with predefined polynomial\n",
+    "\n",
+    "            output[idx] = whitened_byte\n",
+    "\n",
+    "        return output, lfsr\n",
+    "\n",
+    "# Example usage:\n",
+    "data = [0b00000010, 0b01010011, 0b01111101, 0b11100011, 0b10011000]  # Example received SDR data\n",
+    "data = [swap_bits(byte) for byte in data]\n",
+    "whitened, lsfr = BLE_whitening(data)\n",
+    "print([f\"0b{b:08b}\" for b in whitened])  # Output in binary\n",
+    "print([b for b in whitened])  # Output in decimal"
    ]
   }
  ],
