CRC calculation working for example BLE packet

--- a/GNU_Radio_Companion/10_FSK_hardware/whitening.ipynb
+++ b/GNU_Radio_Companion/10_FSK_hardware/whitening.ipynb
@@ -362,6 +362,74 @@
     "print([f\"0b{b:08b}\" for b in whitened])  # Output in binary\n",
     "print([b for b in whitened])  # Output in decimal"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "byte: 00000000, crc: 000000001111111111111111\n",
+      "byte: 00011110, crc: 111000011111111100000000\n",
+      "\n",
+      "CRC: ['0x82', '0x47', '0xC3']\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Flip bit order in a byte (LSB <-> MSB)\n",
+    "def swap_bits(byte):\n",
+    "    return int(f\"{byte:08b}\"[::-1], 2)\n",
+    "\n",
+    "def compute_crc(data, crc_init=0x00FFFF, crc_poly=0x00065B):\n",
+    "    crc = crc_init\n",
+    "    count = 0\n",
+    "    for byte in data:\n",
+    "        byte = swap_bits(byte)\n",
+    "        crc ^= int(byte) << 16\n",
+    "        if (count < 2): \n",
+    "            print(f'byte: {byte:08b}, crc: {crc:024b}')\n",
+    "        for _ in range(8):  # Process each bit\n",
+    "            if crc & 0x800000:  # Check the MSB\n",
+    "                crc = (crc << 1) ^ crc_poly\n",
+    "            else:\n",
+    "                crc <<= 1\n",
+    "            crc &= 0xFFFFFF  # Ensure 24-bit width\n",
+    "        count += 1\n",
+    "\n",
+    "    return np.array([swap_bits((crc >> 16) & 0xFF), \n",
+    "                     swap_bits((crc >> 8) & 0xFF), \n",
+    "                     swap_bits(crc & 0xFF)], dtype=np.uint8)\n",
+    "\n",
+    "# Example usage\n",
+    "data = np.array(\n",
+    "    [0x00, 0x78, 0x02, 0x04, 0x06, 0x08, 0x0A, 0x0C, 0x0E, 0x10, 0x12, 0x14, 0x16, 0x18, 0x1A, 0x1C, \n",
+    "    0x1E, 0x20, 0x22, 0x24, 0x26, 0x28, 0x2A, 0x2C, 0x2E, 0x30, 0x32, 0x34, 0x36, 0x38, 0x3A, 0x3C, \n",
+    "    0x3E, 0x40, 0x42, 0x44, 0x46, 0x48, 0x4A, 0x4C, 0x4E, 0x50, 0x52, 0x54, 0x56, 0x58, 0x5A, 0x5C, \n",
+    "    0x5E, 0x60, 0x62, 0x64, 0x66, 0x68, 0x6A, 0x6C, 0x6E, 0x70, 0x72, 0x74, 0x76, 0x78, 0x7A, 0x7C, \n",
+    "    0x7E, 0x80, 0x82, 0x84, 0x86, 0x88, 0x8A, 0x8C, 0x8E, 0x90, 0x92, 0x94, 0x96, 0x98, 0x9A, 0x9C, \n",
+    "    0x9E, 0xA0, 0xA2, 0xA4, 0xA6, 0xA8, 0xAA, 0xAC, 0xAE, 0xB0, 0xB2, 0xB4, 0xB6, 0xB8, 0xBA, 0xBC, \n",
+    "    0xBE, 0xC0, 0xC2, 0xC4, 0xC6, 0xC8, 0xCA, 0xCC, 0xCE, 0xD0, 0xD2, 0xD4, 0xD6, 0xD8, 0xDA, 0xDC, \n",
+    "    0xDE, 0xE0, 0xE2, 0xE4, 0xE6, 0xE8, 0xEA, 0xEC, 0xEE, 0xF0], \n",
+    "    dtype=np.uint8)\n",
+    "\n",
+    "\n",
+    "\n",
+    "crc_result = compute_crc(data)\n",
+    "\n",
+    "\n",
+    "print(\"\")\n",
+    "print(\"CRC:\", [f\"0x{b:02X}\" for b in crc_result])\n",
+    "print(\"\")\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
