BLE block includes payload whitening Refactored BLE whitening function to make it more readable (more similar to how the CRC is computed, as they are technically the same)

--- a/GNU_Radio_Companion/10_FSK_hardware/whitening.ipynb
+++ b/GNU_Radio_Companion/10_FSK_hardware/whitening.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -260,15 +260,21 @@
     "            print(f'whitened_byte: {whitened_byte:08b}')\n",
     "\n",
     "            # Update LFSR\n",
-    "            lfsr = (lfsr << 1) & 0x7F  # 0x7F mask to keep ksfr within 7 bits\n",
     "            if lfsr_msb:  # If MSB is 1 (before shifting), apply feedback\n",
-    "                lfsr = lfsr ^ polynomial  # XOR with predefined polynomial\n",
+    "                lfsr = (lfsr << 1) ^ polynomial  # XOR with predefined polynomial\n",
+    "            else:\n",
+    "                lfsr <<= 1\n",
+    "            lfsr &= 0x7F  # 0x7F mask to keep ksfr within 7 bits\n",
     "\n",
     "            print(f'lfsr: {lfsr:07b}')\n",
     "\n",
     "        output[idx] = whitened_byte\n",
     "\n",
     "    return output\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# Example usage:\n",
     "data = [0b00000010, 0b01010011, 0b01111101, 0b11100011, 0b10011000]  # Example received SDR data\n",
@@ -280,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -311,12 +317,12 @@
     "binary_data = np.array([0,0,0,0,0,0,1,0,  0,1,0,1,0,0,1,1], dtype=np.uint8)  # Two bytes: 0b00000010 and 0b01010011\n",
     "uint8_result = binary_to_uint8_list(binary_data)\n",
     "\n",
-    "print(uint8_result)  # Output: [  2  83]  (Decimal of 0b00000010 and 0b01010011)\n"
+    "print(uint8_result)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -330,30 +336,33 @@
    ],
    "source": [
     "def BLE_whitening(data, lfsr=0x01, polynomial=0x11):\n",
-    "        # Input data must be LSB first (0x7C = 124 must be formatted as 0011 1110)\n",
-    "        # LFSR default value is 0x01 as it is the default value in the nRF DATAWHITEIV register\n",
-    "        # The polynomial default value is 0x11 = 0b001_0001 -> x⁷ + x⁴ + 1 (x⁷ is omitted)\n",
-    "        output = np.empty_like(data)  # Initialise output array\n",
+    "    # Input data must be LSB first (0x7C = 124 must be formatted as 0011 1110)\n",
+    "    # LFSR default value is 0x01 as it is the default value in the nRF DATAWHITEIV register\n",
+    "    # The polynomial default value is 0x11 = 0b001_0001 -> x⁷ + x⁴ + 1 (x⁷ is omitted)\n",
+    "    output = np.empty_like(data)  # Initialise output array\n",
     "\n",
-    "        for idx, byte, in enumerate(data):\n",
-    "            whitened_byte = 0\n",
-    "            for bit_pos in range(8):\n",
-    "                # XOR the current data bit with LFSR MSB\n",
-    "                lfsr_msb = (lfsr & 0x40) >> 6  # LFSR is 7-bit, so MSB is at position 6\n",
-    "                data_bit = (byte >> bit_pos) & 1  # Extract current bit\n",
-    "                whitened_bit = data_bit ^ lfsr_msb  # XOR\n",
-    "                \n",
-    "                # Update the whitened byte\n",
-    "                whitened_byte |= (whitened_bit << (bit_pos))\n",
+    "    for idx, byte, in enumerate(data):\n",
+    "        whitened_byte = 0\n",
+    "        for bit_pos in range(8):\n",
+    "            # XOR the current data bit with LFSR MSB\n",
+    "            lfsr_msb = (lfsr & 0x40) >> 6  # LFSR is 7-bit, so MSB is at position 6\n",
+    "            data_bit = (byte >> bit_pos) & 1  # Extract current bit\n",
+    "            whitened_bit = data_bit ^ lfsr_msb  # XOR\n",
+    "            \n",
+    "            # Update the whitened byte\n",
+    "            whitened_byte |= (whitened_bit << (bit_pos))\n",
     "\n",
-    "                # Update LFSR\n",
-    "                lfsr = (lfsr << 1) & 0x7F  # 0x7F mask to keep ksfr within 7 bits\n",
-    "                if lfsr_msb:  # If MSB is 1 (before shifting), apply feedback\n",
-    "                    lfsr = lfsr ^ polynomial  # XOR with predefined polynomial\n",
+    "            # Update LFSR\n",
+    "            if lfsr_msb:  # If MSB is 1 (before shifting), apply feedback\n",
+    "                lfsr = (lfsr << 1) ^ polynomial  # XOR with predefined polynomial\n",
+    "            else:\n",
+    "                lfsr <<= 1\n",
+    "            lfsr &= 0x7F  # 0x7F mask to keep ksfr within 7 bits\n",
     "\n",
-    "            output[idx] = whitened_byte\n",
+    "        output[idx] = whitened_byte\n",
     "\n",
-    "        return output, lfsr\n",
+    "    return output, lfsr\n",
+    "\n",
     "\n",
     "# Example usage:\n",
     "data = [0b00000010, 0b01010011, 0b01111101, 0b11100011, 0b10011000]  # Example received SDR data\n",
@@ -365,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
