added CRC check to BLE packets Generated CRC is compared with read CRC

--- a/GNU_Radio_Companion/10_FSK_hardware/whitening.ipynb
+++ b/GNU_Radio_Companion/10_FSK_hardware/whitening.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "def compute_crc(data, crc_init=0x00FFFF, crc_poly=0x00065B, crc_size=3):\n",
+    "def compute_CRC(data, crc_init=0x00FFFF, crc_poly=0x00065B, crc_size=3):\n",
     "    crc_mask = (1 << (crc_size * 8)) - 1  # Mask to n-byte width (0xFFFF for crc_size = 2)\n",
     "    \n",
     "    def swap_nbit(num, n):\n",
@@ -425,7 +425,7 @@
     "    dtype=np.uint8)\n",
     "\n",
     "\n",
-    "crc_result = compute_crc(data)\n",
+    "crc_result = compute_CRC(data)\n",
     "print(\"CRC:\", [f\"0x{b:02X}\" for b in crc_result])"
    ]
   }
