added IEEE 802.15.4 CRC example

--- a/GNU_Radio_Companion/11_BLE_example/whitening.ipynb
+++ b/GNU_Radio_Companion/11_BLE_example/whitening.ipynb
@@ -374,14 +374,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CRC: ['0x82', '0x47', '0xC3']\n"
+      "CRC: ['0x82', '0x47', '0xC3']\n",
+      "CRC: ['0x78', '0x5A']\n"
      ]
     }
    ],
@@ -412,7 +413,7 @@
     "    return np.array([(crc >> (8 * i)) & 0xFF for i in range(crc_size)], dtype=np.uint8)\n",
     "\n",
     "\n",
-    "# Example usage\n",
+    "# Example usage (BLE)\n",
     "data = np.array(\n",
     "    [0x00, 0x78, 0x02, 0x04, 0x06, 0x08, 0x0A, 0x0C, 0x0E, 0x10, 0x12, 0x14, 0x16, 0x18, 0x1A, 0x1C, \n",
     "    0x1E, 0x20, 0x22, 0x24, 0x26, 0x28, 0x2A, 0x2C, 0x2E, 0x30, 0x32, 0x34, 0x36, 0x38, 0x3A, 0x3C, \n",
@@ -426,7 +427,16 @@
     "\n",
     "\n",
     "crc_result = compute_CRC(data)\n",
-    "print(\"CRC:\", [f\"0x{b:02X}\" for b in crc_result])"
+    "print(\"CRC:\", [f\"0x{b:02X}\" for b in crc_result])\n",
+    "\n",
+    "# IEEE 802.15.4 example\n",
+    "data = np.array(\n",
+    "    [0x31, 0x32, 0x33], \n",
+    "    dtype=np.uint8)\n",
+    "\n",
+    "crc_result = compute_CRC(data, crc_init=0x0000, crc_poly=0x011021, crc_size=2)\n",
+    "print(\"CRC:\", [f\"0x{b:02X}\" for b in crc_result])\n",
+    "\n"
    ]
   }
  ],
