whitening interference simulation

--- a/GNU_Radio_Companion/11_BLE_example/whitening.ipynb
+++ b/GNU_Radio_Companion/11_BLE_example/whitening.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -322,15 +322,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Non-interfered data\n",
+      "['0b01000000', '0b11001010', '0b10111110', '0b11000111', '0b00011001']\n",
       "['0b00000000', '0b01111000', '0b00000010', '0b00000100', '0b00000110']\n",
-      "[np.int64(0), np.int64(120), np.int64(2), np.int64(4), np.int64(6)]\n"
+      "['0x00', '0x78', '0x02', '0x04', '0x06']\n",
+      "\n",
+      "Interfered data (assume interference in byte in the middle)\n",
+      "['0b01000000', '0b11001010', '0b01010101', '0b11000111', '0b00011001']\n",
+      "['0b00000000', '0b01111000', '0b11101001', '0b00000100', '0b00000110']\n",
+      "['0x00', '0x78', '0xE9', '0x04', '0x06']\n"
      ]
     }
    ],
@@ -365,16 +372,28 @@
     "\n",
     "\n",
     "# Example usage:\n",
+    "print(\"Non-interfered data\")\n",
     "data = [0b00000010, 0b01010011, 0b01111101, 0b11100011, 0b10011000]  # Example received SDR data\n",
     "data = [swap_bits(byte) for byte in data]\n",
     "whitened, lsfr = BLE_whitening(data)\n",
+    "print([f\"0b{b:08b}\" for b in data])  # Output in binary\n",
     "print([f\"0b{b:08b}\" for b in whitened])  # Output in binary\n",
-    "print([b for b in whitened])  # Output in decimal"
+    "print([f\"0x{b:02X}\" for b in whitened])  # Output in decimal\n",
+    "\n",
+    "print(\"\\nInterfered data (assume interference in byte in the middle)\")\n",
+    "data = [0b00000010, 0b01010011, 0b10101010, 0b11100011, 0b10011000]  # Example received SDR data\n",
+    "data = [swap_bits(byte) for byte in data]\n",
+    "whitened, lsfr = BLE_whitening(data)\n",
+    "print([f\"0b{b:08b}\" for b in data])  # Output in binary\n",
+    "print([f\"0b{b:08b}\" for b in whitened])  # Output in binary\n",
+    "print([f\"0x{b:02X}\" for b in whitened])  # Output in decimal\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
