--- a/GNU_Radio_Companion/11_BLE_example/whitening.ipynb
+++ b/GNU_Radio_Companion/11_BLE_example/whitening.ipynb
@@ -232,9 +232,11 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "\n",
     "# Flip bit order in a byte (LSB <-> MSB)\n",
     "def swap_bits(byte):\n",
     "    return int(f\"{byte:08b}\"[::-1], 2)\n",
+    "\n",
     "\n",
     "# Whiten/dewhiten a list of bytes using a 7-bit LFSR.\n",
     "def BLE_whitening(data, lfsr=0x01, polynomial=0x11):\n",
@@ -243,21 +245,21 @@
     "    # The polynomial default value is 0x11 = 0b001_0001 -> x⁷ + x⁴ + 1 (x⁷ is omitted)\n",
     "    output = np.empty_like(data)  # Initialise output array\n",
     "\n",
-    "    for idx, byte, in enumerate(data):\n",
+    "    for idx, byte in enumerate(data):\n",
     "        whitened_byte = 0\n",
-    "        print(f'\\n##### INDEX: {idx}, BYTE: {byte:08b} #####\\n')\n",
+    "        print(f\"\\n##### INDEX: {idx}, BYTE: {byte:08b} #####\\n\")\n",
     "        for bit_pos in range(8):\n",
-    "            print(f'\\nbit_pos: {bit_pos}')\n",
+    "            print(f\"\\nbit_pos: {bit_pos}\")\n",
     "\n",
     "            # XOR the current data bit with LFSR MSB\n",
     "            lfsr_msb = (lfsr & 0x40) >> 6  # LFSR is 7-bit, so MSB is at position 6\n",
     "            data_bit = (byte >> bit_pos) & 1  # Extract current bit\n",
     "            whitened_bit = data_bit ^ lfsr_msb  # XOR\n",
-    "            print(f'data_bit: {data_bit}, lfsr_msb: {lfsr_msb}, whitened_bit: {whitened_bit}')\n",
-    "            \n",
+    "            print(f\"data_bit: {data_bit}, lfsr_msb: {lfsr_msb}, whitened_bit: {whitened_bit}\")\n",
+    "\n",
     "            # Update the whitened byte\n",
-    "            whitened_byte |= (whitened_bit << (bit_pos))\n",
-    "            print(f'whitened_byte: {whitened_byte:08b}')\n",
+    "            whitened_byte |= whitened_bit << (bit_pos)\n",
+    "            print(f\"whitened_byte: {whitened_byte:08b}\")\n",
     "\n",
     "            # Update LFSR\n",
     "            if lfsr_msb:  # If MSB is 1 (before shifting), apply feedback\n",
@@ -266,14 +268,11 @@
     "                lfsr <<= 1\n",
     "            lfsr &= 0x7F  # 0x7F mask to keep ksfr within 7 bits\n",
     "\n",
-    "            print(f'lfsr: {lfsr:07b}')\n",
+    "            print(f\"lfsr: {lfsr:07b}\")\n",
     "\n",
     "        output[idx] = whitened_byte\n",
     "\n",
     "    return output\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "# Example usage:\n",
@@ -300,11 +299,12 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "\n",
     "def binary_to_uint8_list(binary):\n",
     "    # Ensure the binary array length is a multiple of 8\n",
     "    if len(binary) % 8 != 0:\n",
     "        raise ValueError(\"The binary list length must be a multiple of 8.\")\n",
-    "    \n",
+    "\n",
     "    # Convert binary to NumPy array\n",
     "    binary_array = np.array(binary, dtype=np.uint8)\n",
     "    uint8_list = np.packbits(binary_array)\n",
@@ -314,15 +314,18 @@
     "\n",
     "    return swapped_uint8_list\n",
     "\n",
-    "binary_data = np.array([0,0,0,0,0,0,1,0,  0,1,0,1,0,0,1,1], dtype=np.uint8)  # Two bytes: 0b00000010 and 0b01010011\n",
+    "\n",
+    "binary_data = np.array(\n",
+    "    [0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1], dtype=np.uint8\n",
+    ")  # Two bytes: 0b00000010 and 0b01010011\n",
     "uint8_result = binary_to_uint8_list(binary_data)\n",
     "\n",
-    "print(uint8_result)\n"
+    "print(uint8_result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -348,16 +351,16 @@
     "    # The polynomial default value is 0x11 = 0b001_0001 -> x⁷ + x⁴ + 1 (x⁷ is omitted)\n",
     "    output = np.empty_like(data)  # Initialise output array\n",
     "\n",
-    "    for idx, byte, in enumerate(data):\n",
+    "    for idx, byte in enumerate(data):\n",
     "        whitened_byte = 0\n",
     "        for bit_pos in range(8):\n",
     "            # XOR the current data bit with LFSR MSB\n",
     "            lfsr_msb = (lfsr & 0x40) >> 6  # LFSR is 7-bit, so MSB is at position 6\n",
     "            data_bit = (byte >> bit_pos) & 1  # Extract current bit\n",
     "            whitened_bit = data_bit ^ lfsr_msb  # XOR\n",
-    "            \n",
+    "\n",
     "            # Update the whitened byte\n",
-    "            whitened_byte |= (whitened_bit << (bit_pos))\n",
+    "            whitened_byte |= whitened_bit << (bit_pos)\n",
     "\n",
     "            # Update LFSR\n",
     "            if lfsr_msb:  # If MSB is 1 (before shifting), apply feedback\n",
@@ -386,21 +389,19 @@
     "whitened, lsfr = BLE_whitening(data)\n",
     "print([f\"0b{b:08b}\" for b in data])  # Output in binary\n",
     "print([f\"0b{b:08b}\" for b in whitened])  # Output in binary\n",
-    "print([f\"0x{b:02X}\" for b in whitened])  # Output in decimal\n",
-    "\n",
-    "\n"
+    "print([f\"0x{b:02X}\" for b in whitened])  # Output in decimal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CRC: ['0x82', '0x47', '0xC3']\n",
+      "CRC: ['0x2C', '0x9F', '0x61']\n",
       "CRC: ['0x78', '0x5A']\n"
      ]
     }
@@ -408,17 +409,18 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "\n",
     "def compute_CRC(data, crc_init=0x00FFFF, crc_poly=0x00065B, crc_size=3):\n",
     "    crc_mask = (1 << (crc_size * 8)) - 1  # Mask to n-byte width (0xFFFF for crc_size = 2)\n",
-    "    \n",
+    "\n",
     "    def swap_nbit(num, n):\n",
     "        num = num & crc_mask\n",
-    "        reversed_bits = f'{{:0{n * 8}b}}'.format(num)[::-1]\n",
+    "        reversed_bits = f\"{{:0{n * 8}b}}\".format(num)[::-1]\n",
     "        return int(reversed_bits, 2)\n",
-    "    \n",
+    "\n",
     "    crc_init = swap_nbit(crc_init, crc_size)  # LSB -> MSB\n",
     "    crc_poly = swap_nbit(crc_poly, crc_size)\n",
-    "    \n",
+    "\n",
     "    crc = crc_init\n",
     "    for byte in data:\n",
     "        crc ^= int(byte)\n",
@@ -428,34 +430,34 @@
     "            else:\n",
     "                crc >>= 1\n",
     "            crc &= crc_mask  # Ensure CRC size\n",
-    "    \n",
+    "\n",
     "    return np.array([(crc >> (8 * i)) & 0xFF for i in range(crc_size)], dtype=np.uint8)\n",
     "\n",
     "\n",
     "# Example usage (BLE)\n",
+    "# fmt: off\n",
     "data = np.array(\n",
-    "    [0x00, 0x78, 0x02, 0x04, 0x06, 0x08, 0x0A, 0x0C, 0x0E, 0x10, 0x12, 0x14, 0x16, 0x18, 0x1A, 0x1C, \n",
-    "    0x1E, 0x20, 0x22, 0x24, 0x26, 0x28, 0x2A, 0x2C, 0x2E, 0x30, 0x32, 0x34, 0x36, 0x38, 0x3A, 0x3C, \n",
-    "    0x3E, 0x40, 0x42, 0x44, 0x46, 0x48, 0x4A, 0x4C, 0x4E, 0x50, 0x52, 0x54, 0x56, 0x58, 0x5A, 0x5C, \n",
-    "    0x5E, 0x60, 0x62, 0x64, 0x66, 0x68, 0x6A, 0x6C, 0x6E, 0x70, 0x72, 0x74, 0x76, 0x78, 0x7A, 0x7C, \n",
-    "    0x7E, 0x80, 0x82, 0x84, 0x86, 0x88, 0x8A, 0x8C, 0x8E, 0x90, 0x92, 0x94, 0x96, 0x98, 0x9A, 0x9C, \n",
-    "    0x9E, 0xA0, 0xA2, 0xA4, 0xA6, 0xA8, 0xAA, 0xAC, 0xAE, 0xB0, 0xB2, 0xB4, 0xB6, 0xB8, 0xBA, 0xBC, \n",
-    "    0xBE, 0xC0, 0xC2, 0xC4, 0xC6, 0xC8, 0xCA, 0xCC, 0xCE, 0xD0, 0xD2, 0xD4, 0xD6, 0xD8, 0xDA, 0xDC, \n",
-    "    0xDE, 0xE0, 0xE2, 0xE4, 0xE6, 0xE8, 0xEA, 0xEC, 0xEE, 0xF0], \n",
-    "    dtype=np.uint8)\n",
+    "    (\n",
+    "        0x00, 0x78, 0x02, 0x04, 0x06, 0x08, 0x0A, 0x0C, 0x0E, 0x10, 0x12, 0x14, 0x16, 0x18, 0x1A, 0x1C,\n",
+    "        0x1E, 0x20, 0x22, 0x24, 0x26, 0x28, 0x2A, 0x2C, 0x2E, 0x30, 0x32, 0x34, 0x36, 0x38, 0x3A, 0x3C,\n",
+    "        0x3E, 0x40, 0x42, 0x44, 0x46, 0x48, 0x4A, 0x4C, 0x4E, 0x50, 0x52, 0x54, 0x56, 0x58, 0x5A, 0x5C,\n",
+    "        0x5E, 0x60, 0x62, 0x64, 0x66, 0x68, 0x6A, 0x6C, 0x6E, 0x70, 0x72, 0x74, 0x76, 0x78, 0x7A, 0x7C,\n",
+    "        0x7E, 0x80, 0x82, 0x84, 0x86, 0x88, 0x8A, 0x8C, 0x8E, 0x90, 0x92, 0x94, 0x96, 0x98, 0x9A, 0x9C,\n",
+    "        0x9E, 0xA0, 0xA2, 0xA4, 0xA6, 0xA8, 0xAA, 0xAC, 0xAE, 0xB0, 0xB2, 0xB4, 0xB6, 0xB8, 0xBA, 0xBC,\n",
+    "    ),\n",
+    "    dtype=np.uint8,\n",
+    ")\n",
+    "# fmt: on\n",
     "\n",
     "\n",
     "crc_result = compute_CRC(data)\n",
     "print(\"CRC:\", [f\"0x{b:02X}\" for b in crc_result])\n",
     "\n",
     "# IEEE 802.15.4 example\n",
-    "data = np.array(\n",
-    "    [0x31, 0x32, 0x33], \n",
-    "    dtype=np.uint8)\n",
+    "data = np.array([0x31, 0x32, 0x33], dtype=np.uint8)\n",
     "\n",
     "crc_result = compute_CRC(data, crc_init=0x0000, crc_poly=0x011021, crc_size=2)\n",
-    "print(\"CRC:\", [f\"0x{b:02X}\" for b in crc_result])\n",
-    "\n"
+    "print(\"CRC:\", [f\"0x{b:02X}\" for b in crc_result])"
    ]
   }
  ],
