--- a/GNU_Radio_Companion/13_802154_coherent/OQPSK_prototyping.ipynb
+++ b/GNU_Radio_Companion/13_802154_coherent/OQPSK_prototyping.ipynb
@@ -27,10 +27,10 @@
     "\n",
     "# Plot the pulse\n",
     "plt.figure()\n",
-    "plt.plot(half_sine_pulse, marker='o')\n",
-    "plt.title('Half Sine Pulse')\n",
-    "plt.xlabel('Sample Index')\n",
-    "plt.ylabel('Amplitude')\n",
+    "plt.plot(half_sine_pulse, marker=\"o\")\n",
+    "plt.title(\"Half Sine Pulse\")\n",
+    "plt.xlabel(\"Sample Index\")\n",
+    "plt.ylabel(\"Amplitude\")\n",
     "plt.grid(True)\n",
     "plt.show()"
    ]
@@ -41,8 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fractional delay implementation\n",
-    "\n"
+    "# Fractional delay implementation"
    ]
   }
  ],
